--- a/src/MerchantFrontend/src/app/core/layouts/landing-page-layout/landing-page-layout.component.html
+++ b/src/MerchantFrontend/src/app/core/layouts/landing-page-layout/landing-page-layout.component.html
@@ -7,7 +7,7 @@
       </a>
     </div>
     <div class="header-actions clr-hidden-sm-down">
-      <button (click)="openLogin()" class="btn btn-primary login-button">Login</button>
+      <button (click)="openLogin()" class="btn btn-primary login-button">{{'COMMON.LOGIN' | translate}}</button>
     </div>
   </clr-header>
   <div class="content-container">
