--- a/src/MerchantFrontend/src/app/views/merchant-orders/merchant-orders-details/merchant-orders-details.component.html
+++ b/src/MerchantFrontend/src/app/views/merchant-orders/merchant-orders-details/merchant-orders-details.component.html
@@ -1,16 +1,20 @@
 <ng-container *ngIf="order">
   <h1>
-    Bestellung {{order.orderNumber}}
-    <label class="label label-info" *ngIf="order.stateMachineState.technicalName === 'open'">Offen</label>
-    <label class="label label-success" *ngIf="order.stateMachineState.technicalName === 'completed'">Erledigt</label>
+    {{'COMMON.Order' | translate}} {{order.orderNumber}}
+    <label class="label label-info" *ngIf="order.stateMachineState.technicalName === 'open'">
+      {{'COMMON.OPEN' | translate}}
+    </label>
+    <label class="label label-success" *ngIf="order.stateMachineState.technicalName === 'completed'">
+      {{'MERCHANT.ORDER.COMPLETED' | translate}}
+    </label>
   </h1>
-  <span>Hier die Details zu dieser Bestellung:</span>
-  <h3>Informationen:</h3>
+  <span>{{'MERCHANT.ORDER.DETAILS.SUB_HEADLINE' | translate}}</span>
+  <h3>{{'MERCHANT.ORDER.DETAILS.INFORMATION' | translate}}</h3>
   <div class="clr-row">
     <div class="clr-col-lg-5 clr-col-md-8 clr-col-12">
       <div class="card">
         <div class="card-header">
-          Anschrift:
+          {{'MERCHANT.ORDER.DETAILS.ADDRESS' | translate}}
         </div>
         <div class="card-block">
           <div class="card-text">
@@ -24,13 +28,13 @@
     <div class="clr-col-lg-5 clr-col-md-8 clr-col-12">
       <div class="card">
         <div class="card-header">
-          {{order.orderCustomer.firstName}} {{order.orderCustomer.lastName}} ist erreichbar über:
+          {{order.orderCustomer.firstName}} {{order.orderCustomer.lastName}} {{'MERCHANT.ORDER.DETAILS.CONTACT_DATA' | translate}}
         </div>
         <div class="card-block">
           <div class="card-text">
-            <strong>E-Mail:</strong> {{order.orderCustomer.email}} <br/>
+            <strong>{{'COMMON.EMAIL_ADDRESS' | translate}}:</strong> {{order.orderCustomer.email}} <br/>
             <ng-container *ngIf="order.deliveries[0].shippingOrderAddress.phoneNumber">
-              <strong>Telefon:</strong> {{order.deliveries[0].shippingOrderAddress.phoneNumber}}
+              <strong>{{'COMMON.PHONE' | translate}}:</strong> {{order.deliveries[0].shippingOrderAddress.phoneNumber}}
             </ng-container>
           </div>
         </div>
@@ -39,14 +43,14 @@
   </div>
   <div class="clr-row">
     <div class="clr-col-md-10">
-      <h3>Positionen:</h3>
+      <h3>{{'COMMON.POSITIONS' | translate}}:</h3>
       <clr-datagrid>
-        <clr-dg-placeholder>Keine Positionen vorhanden.</clr-dg-placeholder>
+        <clr-dg-placeholder>{{'MERCHANT.ORDER.DETAILS.PLACEHOLDER' | translate}}</clr-dg-placeholder>
 
-        <clr-dg-column>Name</clr-dg-column>
-        <clr-dg-column>Stückpreis</clr-dg-column>
-        <clr-dg-column>Anzahl</clr-dg-column>
-        <clr-dg-column>Gesamtpreis</clr-dg-column>
+        <clr-dg-column>{{'COMMON.NAME' | translate}}</clr-dg-column>
+        <clr-dg-column>{{'MERCHANT.ORDER.DETAILS.PRICE_PER_UNIT' | translate}}</clr-dg-column>
+        <clr-dg-column>{{'MERCHANT.ORDER.DETAILS.NUMBER' | translate}}</clr-dg-column>
+        <clr-dg-column>{{'MERCHANT.ORDER.DETAILS.TOTAL_PRICE' | translate}}</clr-dg-column>
         <clr-dg-row *ngFor="let orderItem of order.lineItems">
           <clr-dg-cell>{{orderItem.label}}</clr-dg-cell>
           <clr-dg-cell>{{orderItem.price.unitPrice}}€</clr-dg-cell>
@@ -57,7 +61,9 @@
     </div>
   </div>
   <div class="button-wrapper">
-    <button class="btn btn-primary" [disabled]="order.stateMachineState.technicalName !== 'open'" (click)="markOrderAsCompleted()">Als erledigt markieren</button>
+    <button class="btn btn-primary" [disabled]="order.stateMachineState.technicalName !== 'open'" (click)="markOrderAsCompleted()">
+      {{'MERCHANT.ORDER.DETAILS.MARK_COMPLETED_BUTTON' | translate}}
+    </button>
   </div>
 </ng-container>
 
