--- a/src/MerchantFrontend/src/app/views/merchant-products/merchant-products-listing/merchant-products-listing.component.html
+++ b/src/MerchantFrontend/src/app/views/merchant-products/merchant-products-listing/merchant-products-listing.component.html
@@ -1,31 +1,31 @@
 <h1>
-  Produkte
+  {{'MERCHANT.PRODUCTS.HEADLINE' | translate}}
 </h1>
 
 <button type="button" (click)="openAddProductForm()" class="btn btn-primary">
-  Produkt hinzufügen
+  {{'MERCHANT.PRODUCTS.ADD_BUTTON' | translate}}
 </button>
 
 <!-- Datagrid Table -->
 <clr-datagrid (clrDgRefresh)="refresh()" [clrDgLoading]="loading">
-  <clr-dg-placeholder>Keine Produkte gefunden.</clr-dg-placeholder>
+  <clr-dg-placeholder>{{'MERCHANT.PRODUCTS.PLACEHOLDER' | translate}}</clr-dg-placeholder>
 
   <!-- Columns -->
   <clr-dg-column [clrDgField]="'name'">
-    Name
+    {{'COMMON.NAME' | translate}}
     <clr-icon shape="tag" style="margin-left: 8px;"></clr-icon>
   </clr-dg-column>
   <clr-dg-column [clrDgField]="'description'">
-    Beschreibung
+    {{'COMMON.DESCRIPTION' | translate}}
     <clr-icon shape="clipboard" style="margin-left: 8px;"></clr-icon>
   </clr-dg-column>
   <clr-dg-column [clrDgField]="'productType'">
-    Typ
+    {{'COMMON.TYPE' | translate}}
   </clr-dg-column>
   <clr-dg-column>
-    Aktiv
+    {{'COMMON.ACTIVE' | translate}}
   </clr-dg-column>
-  <clr-dg-column>Aktionen</clr-dg-column>
+  <clr-dg-column>{{'COMMON.ACTIONS' | translate}}</clr-dg-column>
 
   <!-- Row -->
   <clr-dg-row *ngFor="let product of products">
@@ -48,8 +48,8 @@
 
   <!-- Footer -->
   <clr-dg-footer>
-    {{ fromProduct }} - {{ tillProduct }} von
-    {{ total }} Produkten
+    {{ fromProduct }} - {{ tillProduct }} {{'COMMON.OF' | translate}}
+    {{ total }} {{'MERCHANT.PRODUCTS.PRODUCTS' | translate}}
     <clr-dg-pagination
       [(clrDgPage)]="currentPage"
       #pagination
